2005-03-11  Peter Bartok  <pbartok@novell.com>

	* Form.cs:
	  - Rudimentary Mdi support
	  - Removed outdated FormParent code
	  - Implemented lots of missing properties and methods, still missing
	    transparency support
	  - Added missing attributes
	  - Implemented support for MaximumBounds
	  - Added firing of various events
	* XplatUI.cs: Added SetIcon() method
	* XplatUIDriver.cs: Added SetIcon() abstract
	* XplatUIOSX.cs: Stubbed out SetIcon() method
	* XplatUIX11.cs: 
	  - Implemented SetIcon() support
	  - Moved SetMenu() and SetBorderStyle() to proper alphabetical pos
	  - Switched to unix line endings
	* XplatUIWin32.cs:
	  - Made POINT internal so for can access it as part of MINMAX
	  - Implemented SetIcon() support
	  - Implemented support for CLIENTCREATESTRUCT (but might have to drop
	    native Mdi support again, might have to go managed)
	* Control.cs: Now fires the StyleChanged event
	* MdiClient.cs: Added; still mostly empty

2005-03-10  Peter Bartok  <pbartok@novell.com>

	* SaveFileDialog.cs: Added emtpy file

2005-03-08  Peter Bartok  <pbartok@novell.com>

	* Control.cs: Fixed bug #73190; now invokes CreateControl (which
	  in turn triggers OnCreateContro) when creating a handle for the
	  first time.
	* TextControl.cs: Fixed endless loop in certain cases when 
	  replacing the current selection

2005-03-08  Jordi Mas i Hernandez <jordi@ximian.com>

	* ScrollBar.cs:
	  - Honors NewValue changes in Scroll events allowing apps to change it
	  - Adds First and Last Scroll events
	  - Fixes Thumb events

2005-03-07  Peter Bartok  <pbartok@novell.com>

	* Hwnd.cs: Added DefaultClientRectangle property
	* XplatUI.cs: Now using the X11 driver Where() method, which provides
	  more detailed debug information
	* XplatUIX11.cs: 
	  - Fixed size-change feedback loop, where we would pull an old size 
	    off the queue and mistakenly change our window's size to an 
	    earlier value
	  - Now compressing ConfigureNotify events, to reduce looping and 